--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/785290'>Use callback to receive media stream device stopped notifications</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/779339'>Introduce callback for MediaStreamDispatcherHost::GenerateStream()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781159'>Moves MenuCommand out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781819'>chrome: Move DuplicateDownloadInfoBarDelegate out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/766227'>[css-typed-om] CSSScale should take Numberishes</a></td><td>Hwanseung Lee</td></tr>
