--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768430'>Upstream LayoutTests/html/dialog/*.html to WPT</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/778622'>Delete icons of BackgroundFetchRegistration</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781819'>Reland "chrome: Move DuplicateDownloadInfoBarDelegate out of chrome namespace."</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781542'>chrome: Move  chrome/browser/ui/ash/multi_user/ files</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781639'>Create scrollbar's if scroll size is greater than visible size.</a></td><td>MuVen</td></tr>
 <tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/785290'>Use callback to receive media stream device stopped notifications</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/779339'>Introduce callback for MediaStreamDispatcherHost::GenerateStream()</a></td><td>Chandan Padhi</td></tr>
