--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787051'>Upstream svg/dom/SVGAnimatedEnumeration*.html to WPT</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768430'>Upstream LayoutTests/html/dialog/*.html to WPT</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/778622'>Delete icons of BackgroundFetchRegistration</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781819'>Reland "chrome: Move DuplicateDownloadInfoBarDelegate out of chrome namespace."</a></td><td>cm.sanchi</td></tr>
