--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/775078'>Fix some edge cases for textarea.rows and textarea.cols</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781640'>[css-typed-om] Parseing relative URLs from strings</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-11-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/735162'>Change default value for aria-orientation in combobox</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-11-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/776737'>Remove custom bindings for Document.open method</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787051'>Upstream svg/dom/SVGAnimatedEnumeration*.html to WPT</a></td><td>Shanmuga Pandi M</td></tr>
