--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/786593'>Rename MediaStreamDispatcher to MediaStreamDeviceObserver</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/784660'>Move more helper functions to PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/775078'>Fix some edge cases for textarea.rows and textarea.cols</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-11-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781640'>[css-typed-om] Parseing relative URLs from strings</a></td><td>Hwanseung Lee</td></tr>
