--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/792770'>Delete title of BackgroundFetchRegistration</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787510'>Rename ChosenObjectRow back to ChosenObjectView</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790060'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790117'>Modify url type from DOMString to USVString to match the specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/741104'>Loading SVG with 0x0 instrinsic dimension should dispatch load event.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/792555'>Remove tests in media/track/opera/track/webvtt/parsing/</a></td><td>Sriram</td></tr>
