--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/796231'>Asynchronous loading SVG should not crash</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/798956'>Remove tests in media/track/opera/track/webvtt/parsing-cue-data/</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/786791'>Use GET_{X,Y}_LPARAM for x/y coordinates instead of LOWORD</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795525'>PaymentHandler: instruments.get() resolves undefined if no stored key</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795590'>Remove tests in media/track/opera/track/webvtt/rendering/</a></td><td>Sriram</td></tr>
