--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768583'>[css-typed-om] CSSRotation should take Numberishes.</a></td><td>nikhil</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790119'>Move media_devices.mojom to //WebKit/public</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/796231'>Asynchronous loading SVG should not crash</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/798956'>Remove tests in media/track/opera/track/webvtt/parsing-cue-data/</a></td><td>Sriram</td></tr>
