--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/792833'>Remove use of setOverlayScrollbarsEnabled in layout tests</a></td><td>Suneel Kota</td></tr>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/789090'>chrome: Move NavigateParams files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787810'>chrome: Move  chrome/browser/ui/crypto files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768583'>[css-typed-om] CSSRotation should take Numberishes.</a></td><td>nikhil</td></tr>
 <tr><td>2017-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790119'>Move media_devices.mojom to //WebKit/public</a></td><td>Chandan Padhi</td></tr>
