--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805635'>CSSURLImageValue should validate URLs</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/806254'>Convert track tests to testharness based.</a></td><td>Sriram</td></tr>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795592'>Converted document object attributes type to USVString as per specification</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805498'>Correcting typo from [CEReactoins] to [CEReactions]</a></td><td>josyulavn</td></tr>
+<tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/649387'>Vulkan support for SkiaRenderer.</a></td><td>suyambu.rm</td></tr>
 <tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/792833'>Remove use of setOverlayScrollbarsEnabled in layout tests</a></td><td>Suneel Kota</td></tr>
 <tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/789090'>chrome: Move NavigateParams files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787810'>chrome: Move  chrome/browser/ui/crypto files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
