--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/796250'>Change ResolutionChangePolicy from unscoped enum to enum class</a></td><td>mallikarjun82</td></tr>
+<tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790270'>Change VideoPixelStorage from unscoped enum to enum class</a></td><td>mallikarjun82</td></tr>
+<tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/800090'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805635'>CSSURLImageValue should validate URLs</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/806254'>Convert track tests to testharness based.</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795592'>Converted document object attributes type to USVString as per specification</a></td><td>Bhagirathi Satpathy</td></tr>
