--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,12 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781331'>[Clusterfuzz] crash in InsertParagraphSeperator</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808547'>Do not attempt reconnect if connection type is NONE.</a></td><td>mck.giri</td></tr>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/786950'>Move MediaRouterUIService files to chrome/browser/ui/</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/776409'>Change ComputedStyle enums to enum classes and rename enumerators</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/807840'>Define StructTraits for content::MediaDeviceInfo</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/806054'>Define EnumTraits for content::MediaDeviceType</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/796250'>Change ResolutionChangePolicy from unscoped enum to enum class</a></td><td>mallikarjun82</td></tr>
 <tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/790270'>Change VideoPixelStorage from unscoped enum to enum class</a></td><td>mallikarjun82</td></tr>
 <tr><td>2017-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/800090'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
