--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/807757'>Upstream media/track/.../crossorigin.html and remove duplicate tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/781331'>[Clusterfuzz] crash in InsertParagraphSeperator</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808547'>Do not attempt reconnect if connection type is NONE.</a></td><td>mck.giri</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/786950'>Move MediaRouterUIService files to chrome/browser/ui/</a></td><td>zhuoyu.qian</td></tr>
