--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/811024'>Fix minor typo in EditorCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810825'>Upstream track-[active-cues, constants].html</a></td><td>Sriram</td></tr>
+<tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810288'>[css-typed-om] CSSUrlImageValue should set attributes to null if there was an error</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/812024'>Add myself to Source/modules/payments/OWNERS</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/652091'>Change default value of aria-valuenow on some roles</a></td><td>deejay</td></tr>
 <tr><td>2017-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/807757'>Upstream media/track/.../crossorigin.html and remove duplicate tests</a></td><td>Sriram</td></tr>
