--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810406'>Change ContentPosition and ContentDistributionType to be enum classes.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/811024'>Fix minor typo in EditorCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810825'>Upstream track-[active-cues, constants].html</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810288'>[css-typed-om] CSSUrlImageValue should set attributes to null if there was an error</a></td><td>Shanmuga Pandi M</td></tr>
