--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805177'>Fixing names of password_manager ViewPassword feature.</a></td><td>nikhil</td></tr>
+<tr><td>2017-12-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/814034'>Upstream track-webvtt-tc[001-005]-*.html tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/813440'>Move css3 text-decoration tests to WPT</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810406'>Change ContentPosition and ContentDistributionType to be enum classes.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/811024'>Fix minor typo in EditorCommand</a></td><td>tanvir.rizvi</td></tr>
