--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808128'>Migrate MediaDevices.enumerateDevices() processing from content to Blink</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-12-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805177'>Fixing names of password_manager ViewPassword feature.</a></td><td>nikhil</td></tr>
 <tr><td>2017-12-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/814034'>Upstream track-webvtt-tc[001-005]-*.html tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/813440'>Move css3 text-decoration tests to WPT</a></td><td>Shanmuga Pandi M</td></tr>
