--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818885'>Upstream track-webvtt-tc[011-015]-*.html tests</a></td><td>Sriram</td></tr>
+<tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818672'>Change OverflowAlignment to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/778720'>Move (Maybe)ShowInvertBubbleView out of chrome namespace</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-12-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818589'>Upstream track-webvtt-tc[006-010]-*.html tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808027'>Remove custom bindings for DOM API Window.open</a></td><td>Bhagirathi Satpathy</td></tr>
