--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787071'>Update parsing of WebVTT regions to current/latest spec</a></td><td>k2.nagaraju</td></tr>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808746'>[css-typed-om] Sort properties which is from iterator</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818885'>Upstream track-webvtt-tc[011-015]-*.html tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818672'>Change OverflowAlignment to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/778720'>Move (Maybe)ShowInvertBubbleView out of chrome namespace</a></td><td>zhuoyu.qian</td></tr>
