--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818595'>PaymentRequest: Add [Exposed=Window] to the PaymentRequest API</a></td><td>Jinho Bang</td></tr>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808404'>Updated DOMString type with USVString for URL-related IDL attributes/operations</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821812'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821990'>Upstream track-webvtt-tc[016-020]-*.html tests</a></td><td>Sriram</td></tr>
+<tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821792'>Change function names in AXObject</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/787071'>Update parsing of WebVTT regions to current/latest spec</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808746'>[css-typed-om] Sort properties which is from iterator</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-12-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818885'>Upstream track-webvtt-tc[011-015]-*.html tests</a></td><td>Sriram</td></tr>
