--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/806751'>Sync CSSStyleDeclaration.setProperty with the spec</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/817458'>Fixing names of password_manager PasswordImport feature.</a></td><td>nikhil</td></tr>
+<tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821831'>chrome: Move BrowserListObserver files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818595'>PaymentRequest: Add [Exposed=Window] to the PaymentRequest API</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/808404'>Updated DOMString type with USVString for URL-related IDL attributes/operations</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821812'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
