--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821801'>Change ItemPosition and ItemPositionType to be enum classes.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810328'>Add article role in SupportsExpanded()</a></td><td>DongJun Kim</td></tr>
+<tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810344'>Introduce SupportsARIAExpanded() for aria-expanded</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/806751'>Sync CSSStyleDeclaration.setProperty with the spec</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/817458'>Fixing names of password_manager PasswordImport feature.</a></td><td>nikhil</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821831'>chrome: Move BrowserListObserver files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
