--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826765'>[bindings] Refactor bindings to accept v8::Isolate* as first parameter.</a></td><td>josyulavn</td></tr>
 <tr><td>2017-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821801'>Change ItemPosition and ItemPositionType to be enum classes.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810328'>Add article role in SupportsExpanded()</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810344'>Introduce SupportsARIAExpanded() for aria-expanded</a></td><td>DongJun Kim</td></tr>
