--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/824282'>[css-typed-om] is2D attribute should be not have default value</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/822311'>Remove |matched_output| field from content::MediaStreamDevice</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826765'>[bindings] Refactor bindings to accept v8::Isolate* as first parameter.</a></td><td>josyulavn</td></tr>
 <tr><td>2017-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/821801'>Change ItemPosition and ItemPositionType to be enum classes.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/810328'>Add article role in SupportsExpanded()</a></td><td>DongJun Kim</td></tr>
