--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826846'>Upstream track-webvtt-tc[021-025]-*.html tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828182'>Make EFillSizeType to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/822559'>Use WebPluginContainerImpl directly instead of PluginView.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/824282'>[css-typed-om] is2D attribute should be not have default value</a></td><td>Hwanseung Lee</td></tr>
