--- a/peer_review.html
+++ b/peer_review.html
@@ -12,6 +12,9 @@
 <body>
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
+<thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
+<tr><td>2017-02-25</td><td>chromium</td><td><a href='https://codereview.chromium.org/2669183002'>Seems incorrect to se device_scale_factor in SetLocalSurfaceId.</a></td><td><a href='https://codereview.chromium.org/user/k.devara'>k.devara</a></td><td>newbie</td></tr>
+<tr><td>2017-02-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2684903003'>Move frame_sink_id management toa new file framesink_manager.cc from surface_manager.cc Modify call&#8230;</a></td><td><a href='https://codereview.chromium.org/user/k.devara'>k.devara</a></td><td>newbie</td></tr>
 
 <script>
 $(document).ready(function() {
