--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,12 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828223'>Store GrContext in sk_sp instead of having raw pointer.</a></td><td>suyambu.rm</td></tr>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/832106'>Upstream track-webvtt-tc[026-032]-*.html tests</a></td><td>Sriram</td></tr>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/831383'>Move wpt css-text-decor/*-ref.html into reference</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/800130'>Convert webapplicationinfo messages to use mojo.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/816214'>Add Vulkan config for Skia in Chromium.</a></td><td>suyambu.rm</td></tr>
+<tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/822550'>Fix for clusterfuzz crash while insertText is executed</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828562'>[css-typed-om] replace undefined variable with defined variable</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-12-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826822'>Remove the outdated comment in ThreadDebugger</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826846'>Upstream track-webvtt-tc[021-025]-*.html tests</a></td><td>Sriram</td></tr>
