--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/830989'>Make Element::SetInlineStyleProperty take a const CSSValue&amp;.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/827964'>Remove PrintNavigation{ErrorMessage/Warning} from Frame.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/831366'>Move WillBeDetached From FrameClient to LocalFrameClient.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828223'>Store GrContext in sk_sp instead of having raw pointer.</a></td><td>suyambu.rm</td></tr>
