--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818586'>PaymentHandler: Fix flaky PaymentAppBrowserTest suite</a></td><td>Jinho Bang</td></tr>
+<tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/823513'>document.all must not be replaced as per specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/829153'>Updated DOMString type with USVString for window.open url</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/830989'>Make Element::SetInlineStyleProperty take a const CSSValue&amp;.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/827964'>Remove PrintNavigation{ErrorMessage/Warning} from Frame.</a></td><td>Zhuoyu Qian</td></tr>
