--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828565'>Change CSSContentDistributionValue functions return CSSValueIDs.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/830988'>Make BackgroundEdgeOrigin to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/833817'>chrome: Move PepperOutputProtectionMessageFilter files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/833830'>chrome: Move BitmapFetcher files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818586'>PaymentHandler: Fix flaky PaymentAppBrowserTest suite</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/823513'>document.all must not be replaced as per specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/829153'>Updated DOMString type with USVString for window.open url</a></td><td>Bhagirathi Satpathy</td></tr>
