--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836328'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836287'>Modified document.open testcase to more accurate for url as USVString type</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/828565'>Change CSSContentDistributionValue functions return CSSValueIDs.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/830988'>Make BackgroundEdgeOrigin to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/833817'>chrome: Move PepperOutputProtectionMessageFilter files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
