--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/756142'>Support VTTCue.positionAlign and lineAlign for WebVTT</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2017-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/833819'>chrome: Move chrome/services files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/833828'>Update MediaStreamDevice's |matched_output_device_id| to use base::Optional</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/812010'>Fix edge cases for input.size</a></td><td>Rob Buis</td></tr>
