--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844305'>[css-typed-om] CSSUnitValue should not have type attribute</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836767'>document |all| property should be |SameObject| to match the spec</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/842325'>Upstream track-remove* tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/842162'>Move PreservesNewline from LayoutObject to LineLayoutItem</a></td><td>Zhuoyu Qian</td></tr>
