--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846584'>prefs: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846581'>content: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846582'>policy: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-12-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844308'>Fix for crash when unlistify paragraph</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844305'>[css-typed-om] CSSUnitValue should not have type attribute</a></td><td>Hwanseung Lee</td></tr>
