--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844297'>Change BoxSide to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/835907'>Make StylePropertyMap::SetProperty take a const CSSValue&amp; instead of ptr</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2017-12-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846321'>Fix for crash with ReplaceSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846584'>prefs: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846581'>content: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846582'>policy: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
