--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836576'>WebVTT line, position and size cue properties stored as double</a></td><td>k2.nagaraju</td></tr>
+<tr><td>2017-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/838902'>Upstream text-track-cue* and track-add* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846160'>Upstream some of track-cue* tests</a></td><td>Sriram</td></tr>
 <tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844297'>Change BoxSide to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/835907'>Make StylePropertyMap::SetProperty take a const CSSValue&amp; instead of ptr</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2017-12-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846321'>Fix for crash with ReplaceSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
