--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-12-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844304'>Remove an overridden constructor in LocationBarBubbleDelegateView</a></td><td>Gajendra N</td></tr>
+<tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/847393'>IDL: Add [Exposed=Window] to MutationObserver and DOMTokenList</a></td><td>Pramod B S</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846644'>ntp_snippets: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/847396'>Upstream some of track-cues* tests</a></td><td>Sriram</td></tr>
 <tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/836576'>WebVTT line, position and size cue properties stored as double</a></td><td>k2.nagaraju</td></tr>
