--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848436'>Upstream track-disabled-* and track-element-* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846601'>autofill: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846645'>viz: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846647'>data_reduction_proxy: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846646'>drive: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
