--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,15 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848465'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848485'>[Autofill] use vector.emplace_back instead of push_back with pair</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/850155'>Upstream track-large-*, track-load-* and track-mode-* tests</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848698'>Upstream tests from media/track/opera/</a></td><td>Sriram</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848484'>Remove Box() and update callers to use GetLayoutBox() instead.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844499'>Convert FrameParts to a class.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/844407'>Move kFirstDynamicTableIndex to http2_hpack_constants.h</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846648'>search_engines: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846602'>offline_pages: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848436'>Upstream track-disabled-* and track-element-* tests</a></td><td>Sriram</td></tr>
 <tr><td>2018-01-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846601'>autofill: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/846645'>viz: Replace base::MakeUnique with std::make_unique</a></td><td>Jinho Bang</td></tr>
