--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/851518'>Upstream track-[id, insert*, node*, selection*, text*] tests</a></td><td>Sriram</td></tr>
 <tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848619'>Change EMaskSourceType to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/849972'>[css-typed-om] CSSStyleValue.parse/parseAll should throw TypeError</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/848465'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
